<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:background="@android:color/transparent">

        <ImageView
                android:id="@+id/swipe_up"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                app:tint="@color/black"
                android:src="@drawable/baseline_keyboard_arrow_up_24"
                android:contentDescription="@string/app_name"
                android:background="@drawable/rounded_bg"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_margin="6dp"
            app:cardCornerRadius="16dp"
            style="@style/Widget.Material3.CardView.Elevated"
            app:cardElevation="8dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/termTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="6dp"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
                    android:text="" />

            <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="6dp"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="6dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
                    android:textColor="@android:color/darker_gray"
                    android:text="@string/definitions"
                    />

            <TextView
                    android:id="@+id/term_definition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
                    android:text=""
                    />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
                    android:textColor="@android:color/darker_gray"
                    android:text="@string/examples"
                    />

            <ListView
                    android:id="@+id/term_examples"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@null"
                    />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>